--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <!-- ★ 이 action 값을 '현재' Apps Script 웹앱 실행 URL(/exec)로 교체 -->
   <form id="relay" method="POST"
-        action="'https://script.google.com/macros/s/AKfycbzfSPRnrzo730FMLSJ4GcNVmrqrtVXstJsxPi2KVInZJQdTyNxEcYDf5sp-z4jP8mhylA/exec'"
+        action="https://script.google.com/macros/s/AKfycbzfSPRnrzo730FMLSJ4GcNVmrqrtVXstJsxPi2KVInZJQdTyNxEcYDf5sp-z4jP8mhylA/exec"
         target="_self" accept-charset="utf-8">
     <input type="hidden" name="k" id="k">
     <button class="btn" type="submit">수동으로 이동</button>
